rtos_sys/rtos_sys.sw/.metadata/.plugins/org.eclipse.cdt.ui/lwip_server.build.log
12:05:20 **** Incremental Build of configuration Debug for project lwip_server ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
 
make --no-print-directory main-build
Building file: ../src/iic_task.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/iic_task.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I/home/ej3b/readoutsys/rtos_sys/rtos_sys.sw/rtos2/export/rtos2/sw/rtos2/freertos10_xilinx_ps7_cortexa9_0/bspinclude/include -MMD -MP -MF"src/iic_task.d" -MT"src/iic_task.o" -o "src/iic_task.o" "../src/iic_task.c"
../src/iic_task.c: In function 'IicTask':
../src/iic_task.c:69:59: error: 'XIicPs_Handler' undeclared (first use in this function); did you mean 'XIicPs_IntrHandler'?
   69 |     XIicPs_SetStatusHandler(&IicInstance, &IicInstance, (*XIicPs_Handler)I2C_InterruptHandler);
      |                                                           ^~~~~~~~~~~~~~
      |                                                           XIicPs_IntrHandler
../src/iic_task.c:69:59: note: each undeclared identifier is reported only once for each function it appears in
../src/iic_task.c:69:74: error: expected ')' before 'I2C_InterruptHandler'
   69 |     XIicPs_SetStatusHandler(&IicInstance, &IicInstance, (*XIicPs_Handler)I2C_InterruptHandler);
      |                            ~                                             ^~~~~~~~~~~~~~~~~~~~
      |                                                                          )
make[1]: *** [src/subdir.mk:35: src/iic_task.o] Error 1
make: *** [makefile:34: all] Error 2

12:05:20 Build Finished (took 275ms)

